# malshark

./: .gitignore  README.md  pyproject.toml
benchmarks/: 2026-05-08-ShubStealer.md  2026-05-22-SmartApeSG.md
src/wireshark_mcp_server/: core.py  main.py  server.py
src/wireshark_mcp_server/tools/: __init__.py  beaconing.py  capture.py  credentials.py  dns_tunneling.py  downloads.py  http_sessions.py  iocs.py  summary.py
